--- a/samples/src/main/resources/SampleFeatureFile.yaml
+++ b/samples/src/main/resources/SampleFeatureFile.yaml
@@ -2,46 +2,32 @@
 name: CalculatorTest
 description: This is a sample YAML format feature file testing a calculator's function
 testSetupSteps:
-  - conjunction: Given
-    identifier: the calculator is powered on
+  - identifier: Given the calculator is powered on
 
 scenarioSetupSteps:
-  - conjunction: When
-    identifier: the all clear button is pressed
-  - conjunction: Then
-    identifier: the calculator should display "0"
+  - identifier: When the all clear button is pressed
+  - identifier: Then the calculator should display "0"
 
 testScenarios:
   - name: Scenario1
     scenarioExecutionSteps:
-      - conjunction: When
-        identifier: the button "1" is pressed
-      - conjunction: And
-        identifier: the button "+" is pressed
-      - conjunction: And
-        identifier: the button "2" is pressed
-      - conjunction: And
-        identifier: the button "=" is pressed
-      - conjunction: And
-        identifier: the calculator should display "3"
+      - identifier: When the button "1" is pressed
+      - identifier: And the button "+" is pressed
+      - identifier: And the button "2" is pressed
+      - identifier: And the button "=" is pressed
+      - identifier: And the calculator should display "3"
 
   - name: Scenario2
     scenarioExecutionSteps:
-      - conjunction: When
-        identifier: the button "2" is pressed
-      - conjunction: And
-        identifier: the button "-" is pressed
-      - conjunction: And
-        identifier: the button "3" is pressed
-      - conjunction: And
-        identifier: the button "=" is pressed
-      - conjunction: And
-        identifier: the calculator should display "-1"
+      - identifier: When a binary operation is perfomed on the calculator
+        testData:
+          operand1: 100
+          operation: "/"
+          operand2: 200
+      - identifier: And the calculator should display "0.5"
 
 scenarioTearDownSteps:
-  - identifier: dummy teardown step
-  
+  - identifier: Then dummy teardown step
+
 testTearDownSteps:
-  - conjunction: Then
-    identifier: the calculator is powered off
-  
+  - identifier: Then the calculator is powered off
