--- a/test-framework/pom.xml
+++ b/test-framework/pom.xml
@@ -61,6 +61,14 @@
 			<version>2.9.8</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.4</version>
+		</dependency>
+
+
 	</dependencies>
 
 </project>
