--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -1,11 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.mvss</groupId>
-	<artifactId>karta</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>Karta</name>
-	<description>Karta Test Automation Framework</description>
-	<packaging>pom</packaging>
+	<groupId>org.mvss.karta</groupId>
+	<artifactId>cli</artifactId>
+	<name>cli</name>
+	<description>Karta CLI</description>
+
+	<parent>
+		<groupId>org.mvss</groupId>
+		<artifactId>karta</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -14,12 +18,12 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
 
-	<modules>
-		<module>framework</module>
-		<module>CLI</module>
-		<module>samples</module>
-		<module>server</module>
-		<module>packager</module>
-	</modules>
+	<dependencies>
+		<dependency>
+			<groupId>org.mvss.karta</groupId>
+			<artifactId>framework</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 
 </project>
