--- a/server/pom.xml
+++ b/server/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mvss.karta</groupId>
-	<artifactId>runner</artifactId>
-	<name>runner</name>
+	<artifactId>server</artifactId>
+	<name>server</name>
 	<version>0.0.1-SNAPSHOT</version>
-	<description>Karta Test Automation Framework</description>
+	<description>Karta Server</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -120,7 +120,7 @@
 
 		<dependency>
 			<groupId>org.mvss.karta</groupId>
-			<artifactId>test-framework</artifactId>
+			<artifactId>framework</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
