--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>karta</name>
-	<comment></comment>
+	<name>Karta</name>
+	<comment>Katra Test Automation Framework</comment>
 	<projects>
 	</projects>
 	<buildSpec>	
