Plugin configuration from Jar file

--- a/packager/src/main/resources/bin/runConfiguration.json
+++ b/packager/src/main/resources/bin/runConfiguration.json
@@ -2,14 +2,19 @@
 	"featureSourceParserPlugin": "Yerkin",
 	"stepRunnerPlugin": "Yerkin",
 	"testDataSourcePlugins": [
-		"Yerkin"
+		"Yerkin",
+		"RandomTestDataSource"
 	],
 	"pluginConfiguration": {
 		"Yerkin": {
+			"stepDefinitionJar": "../plugins/samples.jar",
 			"stepDefinitionClassNames": [
-				"org.mvss.karta.samples.runner.StepDefinitionsCollection1",
-				"org.mvss.karta.samples.runner.StepDefinitionsCollection2"
+				"org.mvss.karta.samples.stepdefinitions.StepDefinitionsCollection1",
+				"org.mvss.karta.samples.stepdefinitions.StepDefinitionsCollection2"
 			]
+		},
+		"RandomTestDataSource": {
+			"seed": 1723
 		}
 	}
 }
