--- a/packager/src/main/resources/bin/RuntimeConfiguration.json
+++ b/packager/src/main/resources/bin/RuntimeConfiguration.json
@@ -1,7 +1,7 @@
 {
-	"featureSourceParserPlugin": "Yerkin",
-	"stepRunnerPlugin": "Yerkin",
-	"testDataSourcePlugins": [
+	"defaultFeatureSourceParserPlugin": "Yerkin",
+	"defaultStepRunnerPlugin": "Yerkin",
+	"defaultTestDataSourcePlugins": [
 		"Yerkin",
 		"RandomTestDataSource"
 	],
@@ -18,6 +18,7 @@
 		}
 	},
 	"propertyFiles": [
+		"KartaProperties.json",
 		"SampleRunProperties.json",
 		"SampleRunProperties2.json"
 	]
