Iteartions for features, Randomization utils for selecting objects are random or exclusively Event listener interface for karta and plugin Default event listener for karta Event processor for Karta Removed plugin name from plugin interface as redundant

--- a/framework/src/main/resources/KartaBaseConfiguration.json
+++ b/framework/src/main/resources/KartaBaseConfiguration.json
@@ -8,6 +8,13 @@
 				"org.mvss.karta.framework.runtime.interfaces.TestDataSource"
 			],
 			"className": "org.mvss.karta.framework.runtime.impl.YerkinPlugin"
+		},
+		{
+			"pluginName": "KartaDefaultTestEventListener",
+			"pluginTypes": [
+				"org.mvss.karta.framework.runtime.interfaces.TestEventListener"
+			],
+			"className": "org.mvss.karta.framework.runtime.impl.DefaultTestEventListener"
 		}
 	],
 	"pluginsDirectory": "../plugins/"
