Karta Minion Server and minions Features steps enabled with nodes to run on minions SSHUtils with default SSL certificate (keyStore and trustStore) for Karta Https enabled on Karta Rest API Server with Karta certificate

--- a/packager/src/main/resources/bin/KartaRuntimeConfiguration.json
+++ b/packager/src/main/resources/bin/KartaRuntimeConfiguration.json
@@ -16,5 +16,16 @@
 	],
 	"testCatalogFiles": [
 		"../repository/KartaTestCatalog.json"
-	]
+	],
+	"sSLProperties": {
+		"trustStoreType": "jks",
+		"trustStore": "trustStore.jks",
+		"trustStorePassword": "changeit",
+		"keyStoreType": "pkcs12",
+		"keyStore": "keyStore.p12",
+		"keyStorePassword": "changeit"
+	},
+	"minions": {
+		
+	}
 }
