--- a/packager/src/main/resources/bin/application.properties
+++ b/packager/src/main/resources/bin/application.properties
@@ -1,1 +1,12 @@
 server.port=18080
+
+security.require-ssl=true
+
+# The format used for the keystore 
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=keyStore.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=changeit
+# The alias mapped to the certificate
+server.ssl.key-alias=karta
