--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -75,6 +75,11 @@
 			<version>1.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.11</version>
+		</dependency>
 
 	</dependencies>
 
