--- a/packager/src/main/resources/bin/KartaRuntimeConfiguration.json
+++ b/packager/src/main/resources/bin/KartaRuntimeConfiguration.json
@@ -26,6 +26,15 @@
 		"keyStorePassword": "changeit"
 	},
 	"minions": {
-		
+		"Node1": {
+			"host": "localhost",
+			"port": 17171,
+			"enableSSL": true
+		},
+		"Node2": {
+			"host": "localhost",
+			"port": 17171,
+			"enableSSL": true
+		}
 	}
 }
