--- a/packager/src/main/resources/samples/KartaBaseConfiguration.json
+++ b/packager/src/main/resources/samples/KartaBaseConfiguration.json
@@ -31,5 +31,5 @@
 			"className": "org.mvss.karta.framework.runtime.impl.RabbitMQTestEventListener"
 		}
 	],
-	"pluginsDirectory": "../plugins/"
+	"pluginsDirectory": "."
 }
