--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -81,6 +81,13 @@
 			<version>0.9.11</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.rabbitmq/amqp-client -->
+		<dependency>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+			<version>5.9.0</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
