--- a/packager/src/main/resources/samples/KartaRuntimeConfiguration.json
+++ b/packager/src/main/resources/samples/KartaRuntimeConfiguration.json
@@ -2,6 +2,7 @@
 	"enabledPlugins": [
 		"Yerkin",
 		"YerkinExt",
+		"KartaObjectGenTestDataSource",
 		"RandomTestDataSource",
 		"KartaDefaultTestEventListener",
 		"KartaDumpToFileTestEventListener",
