--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -88,6 +88,13 @@
 			<version>5.9.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.2</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
