--- a/packager/src/main/resources/samples/KartaRuntimeConfiguration.json
+++ b/packager/src/main/resources/samples/KartaRuntimeConfiguration.json
@@ -6,7 +6,8 @@
 		"RandomTestDataSource",
 		"KartaDefaultTestEventListener",
 		"KartaDumpToFileTestEventListener",
-		"KartaRabbitMQTestEventListener"
+		"KartaRabbitMQTestEventListener",
+		"CSVTestDataSourcePlugin"
 	],
 	"defaultFeatureSourceParserPlugin": "Yerkin",
 	"defaultStepRunnerPlugin": "Yerkin",
