--- a/packager/src/main/resources/samples/application.properties
+++ b/packager/src/main/resources/samples/application.properties
@@ -5,7 +5,7 @@ security.require-ssl=true
 # The format used for the keystore 
 server.ssl.key-store-type=PKCS12
 # The path to the keystore containing the certificate
-server.ssl.key-store=..\\bin\\keyStore.p12
+server.ssl.key-store=../bin/keyStore.p12
 # The password used to generate the certificate
 server.ssl.key-store-password=changeit
 # The alias mapped to the certificate
