OOB DataFilesTestDataSourcePlugin - defaults ExecutionStepPointer now does not have TestStep but only step identifier StepRunners need to implement a new method sanitize sanitizeStepDefinition( String stepDefinition ) to remove inline data for step identifer lookup In Step test data will now be merged by Base runners and StepRunner need to do this. Move plugin directory as a runtime configuration and not base base configuration.

--- a/framework/src/main/resources/KartaBaseConfiguration.yaml
+++ b/framework/src/main/resources/KartaBaseConfiguration.yaml
@@ -4,8 +4,12 @@ pluginConfigs:
     pluginTypes:
       - org.mvss.karta.framework.runtime.interfaces.FeatureSourceParser
       - org.mvss.karta.framework.runtime.interfaces.StepRunner
-      - org.mvss.karta.framework.runtime.interfaces.TestDataSource
     className: org.mvss.karta.framework.runtime.impl.YerkinPlugin
+
+  - pluginName: KartaDataFilesTestDataSourcePlugin
+    pluginTypes:
+      - org.mvss.karta.framework.runtime.interfaces.TestDataSource
+    className: org.mvss.karta.framework.runtime.impl.DataFilesTestDataSourcePlugin
 
   - pluginName: KartaObjectGenTestDataSource
     pluginTypes:
@@ -26,5 +30,3 @@ pluginConfigs:
     pluginTypes:
       - org.mvss.karta.framework.runtime.interfaces.TestEventListener
     className: org.mvss.karta.framework.runtime.impl.RabbitMQTestEventListener
-
-pluginsDirectory: "../plugins/"
