--- a/samples/src/main/resources/KartaTestCatalog.yaml
+++ b/samples/src/main/resources/KartaTestCatalog.yaml
@@ -8,7 +8,7 @@ tags:
 featureSourceParserPlugin: YerkinExt
 stepRunnerPlugin: YerkinExt
 testDataSourcePlugins:
-  - YerkinExt
+  - KartaDataFilesTestDataSourcePlugin
   - KartaObjectGenTestDataSource
   - RandomTestDataSource
   - CSVTestDataSourcePlugin
