--- a/packager/src/main/resources/samples/KartaRuntimeProperties.yaml
+++ b/packager/src/main/resources/samples/KartaRuntimeProperties.yaml
@@ -1,4 +1,3 @@
----
 Karta:
   EventProcessor.numberOfThread: 10
   EventProcessor.maxEventQueueSize: 100
@@ -7,16 +6,16 @@ Karta:
     port: 17171
     enableSSL: true
 
-Yerkin:
+Kriya:
   stepDefinitionPackageNames:
     - org.mvss.karta.samples.stepdefinitions
   chaosActionDefinitionPackageNames:
     - org.mvss.karta.samples.chaosdefinitions
 
-KartaDumpToFileTestEventListener:
+DumpToFileTestEventListener:
   fileName: KartaEventsRawDump.bin
 
-KartaRabbitMQTestEventListener:
+RabbitMQTestEventListener:
   queueName: KartaEvents
   userName: guest
   password: guest
@@ -24,12 +23,12 @@ KartaRabbitMQTestEventListener:
   hostName: localhost
   portNumber: 5672
 
-KartaDataFilesTestDataSourcePlugin:
+DataFilesTestDataSource:
   dataPath:
     - dataFile1.yaml
     - testDataFolder
 
-KartaObjectGenTestDataSource:
+ObjectGenTestDataSource:
   objectRuleMap:
     employee:
       ruleType: OBJECT_RULE
