--- a/packager/src/main/resources/samples/KartaRuntimeConfiguration.yaml
+++ b/packager/src/main/resources/samples/KartaRuntimeConfiguration.yaml
@@ -35,6 +35,8 @@ sslProperties:
   keyStore: "../bin/keyStore.p12"
   keyStorePassword: changeit
 
+nodeName: local
+
 minions:
   Node1:
     host: localhost
