--- a/samples/src/main/resources/SampleFeatureFile2.yaml
+++ b/samples/src/main/resources/SampleFeatureFile2.yaml
@@ -3,6 +3,26 @@ name: CalculatorTest2
 description: This is a sample 2 YAML format feature file testing a calculator's function
 chanceBasedScenarioExecution: true
 exclusiveScenarioPerIteration: true
+
+testJobs:
+  - name: job1
+    repeat: true
+    interval: 1000
+    steps:
+      - identifier: Then authenticate to get new token
+        testData:
+          userName: "admin"
+          password: "password@123"
+
+      - identifier: And reserve use of calculator for next "1500" milliseconds
+
+      - identifier: Then logoff the old token
+
+  - name: job2
+    steps:
+      - identifier: Then the calculator is powered on
+      - identifier: And the all clear button is pressed
+
 setupSteps:
   - identifier: Given the calculator is powered on
 
@@ -21,7 +41,7 @@ testScenarios:
       - identifier: And the calculator should display "5"
 
   - name: Scenario2
-    probability: 0.5  
+    probability: 0.5
     scenarioExecutionSteps:
       - identifier: When a binary operation is perfomed on the calculator
         testData:
