--- a/packager/src/main/resources/bin/KartaRuntimeProperties.yaml
+++ b/packager/src/main/resources/bin/KartaRuntimeProperties.yaml
@@ -1,5 +1,5 @@
 Karta:
-  EventProcessor.numberOfThread: 10
+  EventProcessor.numberOfThread: 1
   EventProcessor.maxEventQueueSize: 100
   node.config:
     host: localhost
@@ -10,9 +10,9 @@ Kriya:
   stepDefinitionPackageNames: []
   chaosActionDefinitionPackageNames: []
 
-DataFilesTestDataSource:
-  dataPath:
-    - ../repository/testdata
+# DataFilesTestDataSource:
+#   dataPath:
+#     - testdata
 
 DumpToFileTestEventListener:
   fileName: KartaEventsRawDump.bin
