Move chance based execution out of feature to test and runTarget. Priority sorting for features filtered by tag. Move exeception handlings at runners to up to KartaRuntime Testdata in steps is now a list of possible values Renamed scenario feilds to be shorter Sample Gherkin Feature Source parser plugin and example.

--- a/packager/src/main/resources/samples/KartaRuntimeConfiguration.yaml
+++ b/packager/src/main/resources/samples/KartaRuntimeConfiguration.yaml
@@ -1,5 +1,5 @@
 pluginsDirectories:
-  - "${KARTA_HOME}/plugins/" 
+  - "${KARTA_HOME}/plugins/"
   - "."
 enabledPlugins:
   - Kriya
@@ -10,6 +10,7 @@ enabledPlugins:
   - LoggingTestEventListener
   - DumpToFileTestEventListener
   #- RabbitMQTestEventListener
+  - GherkinPlugin
   - CSVTestDataSourcePlugin
 
 defaultFeatureSourceParserPlugin: Kriya
