--- a/samples/src/main/resources/SampleFeatureFile.yaml
+++ b/samples/src/main/resources/SampleFeatureFile.yaml
@@ -10,7 +10,7 @@ scenarioSetupSteps:
 
 testScenarios:
   - name: Scenario1
-    scenarioExecutionSteps:
+    executionSteps:
       - identifier: When the button "1" is pressed
       - identifier: And the button "+" is pressed
       - identifier: And the button "2" is pressed
@@ -18,12 +18,12 @@ testScenarios:
       - identifier: And the calculator should display "3"
 
   - name: Scenario2
-    scenarioExecutionSteps:
+    executionSteps:
       - identifier: When a binary operation is perfomed on the calculator
         testData:
-          operand1: 100
-          operation: "/"
-          operand2: 200
+          operand1: [100]
+          operation: ["/"]
+          operand2: [200]
       - identifier: And the calculator should display "0.5"
 
 scenarioTearDownSteps:
