--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mvss</groupId>
 	<artifactId>karta</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>Karta</name>
 	<description>Karta Test Automation Framework</description>
 	<packaging>pom</packaging>
