--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -108,7 +108,15 @@
 			<version>2.3.2</version>
 		</dependency>
 
-
 	</dependencies>
+
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub ManianVSS Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/ManianVSS/Karta</url>
+		</repository>
+	</distributionManagement>
+
 
 </project>
