--- a/server/pom.xml
+++ b/server/pom.xml
@@ -139,4 +139,12 @@
 		</plugins>
 	</build>
 
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub ManianVSS Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/ManianVSS/Karta</url>
+		</repository>
+	</distributionManagement>
+
 </project>
