Multi-threaded tests runner and configuration. Exclusive thread group configuration for tests and test category. Scenario resturn scenarioResult Link versiong for modules and moved Server's parent from spring boot to Karta.

--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -17,14 +17,14 @@
 	<parent>
 		<groupId>org.mvss</groupId>
 		<artifactId>karta</artifactId>
-		<version>0.0.2</version>
+		<version>${project.version}</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.mvss.karta</groupId>
 			<artifactId>framework</artifactId>
-			<version>0.0.2</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
