--- a/server/pom.xml
+++ b/server/pom.xml
@@ -2,26 +2,26 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.mvss.karta</groupId>
-	<artifactId>server</artifactId>
-	<name>server</name>
-	<version>0.0.2</version>
-	<description>Karta Server</description>
-
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.2.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
-	</parent>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
 
+	<groupId>org.mvss.karta</groupId>
+	<artifactId>server</artifactId>
+	<name>server</name>
+	<description>Karta Server</description>
+
+	<parent>
+		<groupId>org.mvss</groupId>
+		<artifactId>karta</artifactId>
+		<version>${project.version}</version>
+	</parent>
+
+	<!-- <parent> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-parent</artifactId> 
+		<version>2.3.2.RELEASE</version> <relativePath /> lookup parent from repository 
+		</parent> -->
 	<dependencies>
 
 		<dependency>
@@ -123,7 +123,7 @@
 		<dependency>
 			<groupId>org.mvss.karta</groupId>
 			<artifactId>framework</artifactId>
-			<version>0.0.2</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -135,6 +135,14 @@
 				<configuration>
 					<layout>ZIP</layout>
 				</configuration>
+				<version>${spring.boot.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
