--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mvss</groupId>
 	<artifactId>karta</artifactId>
-	<version>0.0.2</version>
+	<version>${project.version}</version>
 	<name>Karta</name>
 	<description>Karta Test Automation Framework</description>
 	<packaging>pom</packaging>
@@ -14,6 +14,8 @@
 		<java.version>1.8</java.version>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
+		<project.version>0.0.3</project.version>
+		<spring.boot.version>2.3.2.RELEASE</spring.boot.version>
 	</properties>
 
 	<modules>
@@ -23,6 +25,18 @@
 		<module>server</module>
 		<module>packager</module>
 	</modules>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${spring.boot.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<distributionManagement>
 		<repository>
